Updates to V5.0 release notes and supporting pages.
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.0 (Expected February 2024)
+## Release 5.0 (Expected March 2024)
 
 _**These are DRAFT release notes.  The notes will be updated until & when 5.0 is released**_
 
@@ -12,7 +12,7 @@ Release 5.0 is a major functional release focused on usability, both from the po
 * *UI back-end consolidation* - updates to the view server to allow both Egeria UIs to connect to it whether it is running in the OMAG Server Platform or OMAG Server Runtime.  This eliminates the need to run the Egeria UI application.
 * *Digital Product Support* - new APIs for creating a digital product catalog.
 * *Survey Support* - new framework, services and report utility to support the surveying of digital resources to understand its contents before embarking on wholesale cataloguing and governance.
-* *Reduction of technical debt* - there has been internal code changes to remove deprecated code, remove the duplication of type information and bug fixes.
+* *Reduction of technical debt* - there has been internal code changes to remove deprecated code, remove the duplication of type information, and many bug fixes :).
 
 
 ??? functional "Open Metadata Types"
@@ -21,7 +21,9 @@ Release 5.0 is a major functional release focused on usability, both from the po
     * The [*Collection*](/types/0/0021-Collections) entity has a new attribute called *collectionType* that can be used to identify the concept that the collection represents.
     * A new supertype called [*Action*](/types/1/0137-Actions) has been added to the [*ToDo*](/types/1/0137-Actions) and [*EngineAction*](/types/4/0463-Engine-Actions).
     * The [*Actions*](/types/1/0137-Actions) relationship now links an [*Action*](/types/1/0137-Actions) to a [*Referenceable*](/types/0/0010-Base-Model).
-    * A new classification called [*PersonalProject*](/types/1/0130-Projects) can be added to a project entity to indicate that this is an informal project that have been created by an individual to help them organize their work.
+    * The [*ToDo*](/types/1/0137-Actions) entity has a new property called *lastReviewTime*.
+    * A new classification called [*PersonalProject*](/types/1/0130-Projects) can be added to a project entity to indicate that it is an informal project that have been created by an individual to help them organize their work.
+    * A new classification called [*StudyProject*](/types/1/0130-Projects) can be added to a project entity to indicate that it is a focused analysis of a topic, person, object or situation.
     * A new classification called [*DataScope*](/types/2/0210-Data-Stores) can be added to a referenceable entity (typically a DataStore or DataSet) to define the scope of the associated data resource in space and time.
     * Although not yet implemented in the [Engine Host](/concepts/engine-host), there are types for a new type of governance engine called the [*EventActionEngine*](/types/4/0461-Governance-Engines) and its corresponding governance service called [*EventActionService*](/types/4/0461-Governance-Engines).  This new engine is for managing context events, scheduling and associated actions.
     * A new entity called a [*ContextEvent*](/types/4/0475-Context-Events) plus associated elements has been added to provide a means to capture significant events that impact users, data, services, etcetera, to be recorded and used to explain why blips occurred in the past, or plan and take action to mitigate against blips in the future.
@@ -42,52 +44,53 @@ Release 5.0 is a major functional release focused on usability, both from the po
 
     The java package name of the integrated version of the connector has changed from `org.odpi.egeria.connectors.juxt.xtdb.repositoryconnector.XtdbOMRSRepositoryConnectorProvider` to `org.odpi.openmetadata.adapters.repositoryservices.xtdb.repositoryconnector.XTDBOMRSRepositoryConnectorProvider` so it is possible to continue to run the original version of the XTDB connector in V5.0.
 
-??? danger "XTDB hang, or platform exit due to mismatch crypto library"
-    On the latest level of the MacOs operating system we have experienced hangs during server startup, or the OMAG Server Platform exiting with a message complaining about the unsafe load of a cryptographic library.  A question has been raised with the XTDB community to find out more about this library. In the meantime, there is a workaround if you see this issue: set the following environment variables before starting your OMAG Server Platform.  This switches XTDB to using its own cryptography libraries.
+    ??? danger "XTDB hang, or platform exit due to mismatch crypto library"
+        On the latest level of the MacOs operating system we have experienced hangs during server startup, or the OMAG Server Platform exiting with a message complaining about the unsafe load of a cryptographic library.  A question has been raised with the XTDB community to find out more about this library. In the meantime, there is a workaround if you see this issue: set the following environment variables before starting your OMAG Server Platform.  This switches XTDB to using its own cryptography libraries.
 
-    ```properties
-    XTDB_DISABLE_LIBCRYPTO=True;XTDB_ENABLE_BYTEUTILS_SHA1=True
-    ```
+        ```properties
+        XTDB_DISABLE_LIBCRYPTO=True;XTDB_ENABLE_BYTEUTILS_SHA1=True
+        ```
 
-??? warning "Open Lineage Services and Open Lineage Server renamed to Lineage Warehouse Services and Lineage Warehouse respectively"
-    Our use of the term "open lineage" for our lineage governance server has been causing confusion with the newer Open Lineage standard and project.  As a result, the Egeria *Open Lineage Services* are now called the [*Lineage Warehouse Services*](/services/lineage-warehouse-services) and the OMAG Server they run is called the [Lineage Warehouse](/concepts/lineage-warehouse).  The new name is more descriptive and avoiding clashing names is desirable.  The change has been made cleanly both to the code and the document site (ie no backward compatible deprecated methods) to ensure the name clashing is completely removed.  Every should work as before, except that when migrating an open lineage server to version 5.0, it is necessary to reconfigure what was the open lineage services section to the new lineage warehouse services section.  The structure is the same, but the class name has changed from `OpenLineageConfig` to `LineageWarehouseConfig`, and the `connectorProviderClassName` of the JanusGraph connector has changed from `org.odpi.openmetadata.openconnectors.governancedaemonconnectors.openlineageconnectors.janusconnector.graph.LineageGraphConnectorProvider` to `org.odpi.openmetadata.openconnectors.governancedaemonconnectors.lineagewarenouseconnectors.janusconnector.graph.LineageGraphConnectorProvider`.  Full details of this change are describes in the [Administration Guide](/guides/admin/servers/configuring-a-lineage-warehouse-server). 
+??? warning "Improved/changed terminology"
+    The following concepts have been renamed to improve the clarity of their function, particularly in the documentation.
 
-??? functional "Support for default configuration documents"
-    There is a new `application.properties` property supported by the OMAG Server Platform that allows a default [configuration document](/concepts/configuration-document) to be set up for the configuration document store.  This provides the initial content for each new server configuration created on the platform.   The new property is called `platform.default.config.document` and is described in the [Administration Guide](/guides/admin/configuring-the-omag-server-platform/#configuring-the-default-configuration-document).
+    ??? warning "Open Lineage Services and Open Lineage Server renamed to Lineage Warehouse Services and Lineage Warehouse respectively"
+        Our use of the term "open lineage" for our lineage governance server has been causing confusion with the newer Open Lineage standard and project.  As a result, the Egeria *Open Lineage Services* are now called the [*Lineage Warehouse Services*](/services/lineage-warehouse-services) and the OMAG Server they run is called the [Lineage Warehouse](/concepts/lineage-warehouse).  The new name is more descriptive and avoiding clashing names is desirable.  The change has been made cleanly both to the code and the document site (ie no backward compatible deprecated methods) to ensure the name clashing is completely removed.  Every should work as before, except that when migrating an open lineage server to version 5.0, it is necessary to reconfigure what was the open lineage services section to the new lineage warehouse services section.  The structure is the same, but the class name has changed from `OpenLineageConfig` to `LineageWarehouseConfig`, and the `connectorProviderClassName` of the JanusGraph connector has changed from `org.odpi.openmetadata.openconnectors.governancedaemonconnectors.openlineageconnectors.janusconnector.graph.LineageGraphConnectorProvider` to `org.odpi.openmetadata.openconnectors.governancedaemonconnectors.lineagewarenouseconnectors.janusconnector.graph.LineageGraphConnectorProvider`.  Full details of this change are describes in the [Administration Guide](/guides/admin/servers/configuring-a-lineage-warehouse-server). 
 
-??? functional "New administration commands for basic server properties"
-    The administration services support new commands to set up, retrieve and clear the basic server properties in a server's [configuration document](/concepts/configuration-document) in one operation.  These properties are *serverDescription*, *organizationName*, *localServerUserId*, *localServerPassword* and *maxPageSize*.  The new calls are described in the [Administration Guide](/guides/admin/servers/by-section/basic-server-properties-section).
+    ??? tip "*Governance Action* is renamed to *Engine Action*"
+        If you have been using Egeria for a while, you may be familiar with the term *Governance Action* as the mechanism used to control the execution of automated actions in the [Engine Hosts](/concepts/engine-host).  In release 5.0, *Governance Action* is renamed to *Engine Action* to create a greater name differentiation between the concepts that are used to define the governance behaviour and those used to control the execution of this behaviour.  The term *Governance Action* is now used as a general term for a [Governance Action Process](/concepts/governance-action-process) or a [Governance Action Type](/concepts/governance-action-type).  There is also a differentiation between a Governance Action Type that is used to initiate a standalone Engine Action and a specialized Governance Action Type called a [Governance Action Process Step](/concepts/governance-action-process-step) that describes a single step in a Governance Action Process.
 
-??? functional "New administration command to retrieve the metadata collection name"
-    The administration services support a new command to retrieve the metadata collection name set up for a repository in a [cohort member](/concepts/cohort-member) server.  This complements the calls to set up the metadata collection name and metadata collection id, and retrieve the metadata collection id.
+??? functional "New Python client called pyegeria"
+    A new python client called `pyegeria` for Egeria's administrative, platform and server operational services is available on `pypi`.  Future plans include coverage of all view services and the metadata highway and governance server operational services.
 
-??? functional "New administration commands for the Engine Host"
-    The administration services support new commands to simplify the configuration of an [engine host](/concepts/engine-host).  It is no longer necessary to match the type of the engines you are configuring with the associated engine service.  You can now specify a single list of governance engine that you want to run in the engine host and Egeria will work out which engine service to manage each of them.  See the [Administration Guide](/guides/admin/servers/configuring-an-engine-host) for more information.
+??? functional "Improved administration"
+    ??? functional "New administration commands for basic server properties"
+        The administration services support new commands to set up, retrieve and clear the basic server properties in a server's [configuration document](/concepts/configuration-document) in one operation.  These properties are *serverDescription*, *organizationName*, *localServerUserId*, *localServerPassword* and *maxPageSize*.  The new calls are described in the [Administration Guide](/guides/admin/servers/by-section/basic-server-properties-section).
+    
+    ??? functional "New administration command to retrieve the metadata collection name"
+        The administration services support a new command to retrieve the metadata collection name set up for a repository in a [cohort member](/concepts/cohort-member) server.  This complements the calls to set up the metadata collection name and metadata collection id, and retrieve the metadata collection id.
+    
+    ??? functional "New administration commands for the Engine Host"
+        The administration services support new commands to simplify the configuration of an [engine host](/concepts/engine-host).  It is no longer necessary to match the type of the engines you are configuring with the associated engine service.  You can now specify a single list of governance engine that you want to run in the engine host and Egeria will work out which engine service to manage each of them.  See the [Administration Guide](/guides/admin/servers/configuring-an-engine-host) for more information.
+    
+    ??? functional "New administration commands for the Integration Daemon"
+        The administration services support new commands to simplify the configuration of an [integration daemon](/concepts/integration-daemon).  It is now possible to configure all the integration services in a single call.  There are also new methods to work with all the configuration in the *integration daemon services* as a single request.  See the [Administration Guide](/guides/admin/servers/configuring-an-integration-daemon) for more information.
+    
+    ??? functional "New administration commands for the View Server"
+        The administration services support new commands to simplify the configuration of an [view server](/concepts/view-server).  It is now possible to configure all the view services in a single call.  See the [Administration Guide](/guides/admin/servers/configuring-a-view-server) for more information.
+    
+    ??? functional "Placeholder variables supported in the configuration document"
+        It is possible to add placeholders in string properties of an OMAG Server's [configuration document](/concepts/configuration-document).  The replacement values are configured either by a REST API call (OMAG Server Platform only), or, more typically in the `application.properties` for either the OMAG Server Platform or OMAG Server Runtime.  The placeholders are replaced by these values each time the server starts.   This means that the server can be run in different environments without reconfiguring the server.  Full details can be found in the [Configuration Document](/concepts/configuration-document) documentation.
 
-??? functional "New administration commands for the Integration Daemon"
-    The administration services support new commands to simplify the configuration of an [integration daemon](/concepts/integration-daemon).  It is now possible to configure all the integration services in a single call.  There are also new methods to work with all the configuration in the *integration daemon services* as a single request.  See the [Administration Guide](/guides/admin/servers/configuring-an-integration-daemon) for more information.
+    ??? functional "Support for default configuration documents"
+        There is a new `application.properties` property supported by the OMAG Server Platform that allows a default [configuration document](/concepts/configuration-document) to be set up for the configuration document store.  This provides the initial content for each new server configuration created on the platform.   The new property is called `platform.default.config.document` and is described in the [Administration Guide](/guides/admin/configuring-the-omag-server-platform/#configuring-the-default-configuration-document).
 
-??? functional "New administration commands for the View Server"
-    The administration services support new commands to simplify the configuration of an [view server](/concepts/view-server).  It is now possible to configure all the view services in a single call.  See the [Administration Guide](/guides/admin/servers/configuring-a-view-server) for more information.
-
-??? functional "Placeholder variables supported in the configuration document"
-    It is possible to add placeholders in string properties of an OMAG Server's [configuration document](/concepts/configuration-document).  The replacement values are configured either by a REST API call (OMAG Server Platform only), or, more typically in the `application.properties` for either the OMAG Server Platform or OMAG Server Runtime.  The placeholders are replaced by these values each time the server starts.   This means that the server can be run in different environments without reconfiguring the server.  Full details can be found in the [Configuration Document](/concepts/configuration-document) documentation.
 
 ??? functional "Placeholder properties supported in metadata templates"
-    It is possible to add placeholders to properties in metadata elements that .  The replacement values are configured either by a REST API call (OMAG Server Platform only), or, more typically in the `application.properties` for either the OMAG Server Platform or OMAG Server Runtime.  The placeholders are replaced by these values each time the server starts.   This means that the server can be run in different environments without reconfiguring the server.  Full details can be found in the [Configuration Document](/concepts/configuration-document) documentation.
+    It is possible to add placeholders to properties in metadata elements that are used as [templates](/features/templated-cataloguing/overview) when creating new metadata elements.  The replacement values are supplied on the request to create the new element from the template. 
 
-??? danger "Removal of the Anonymous Repository Services"
-    The anonymous versions to the OMRS Metadata Collection REST APIs have been removed from Egeria's runtimes since they do not include
-    caller information, and therefore provide opportunities for a denial of service attack.
-      * getMetadataCollectionId
-      * getEntity
-      * getRelationship
-
-??? tip "*Governance Action* is renamed to *Engine Action*"
-    If you have been using Egeria for a while, you may be familiar with the term *Governance Action* as the mechanism used to control the execution of automated actions in the [Engine Hosts](/concepts/engine-host).  In release 5.0, *Governance Action* is renamed to *Engine Action* to create a greater name differentiation between the concepts that are used to define the governance behaviour and those used to control the execution of this behaviour.  The term *Governance Action* is now used as a general term for a [Governance Action Process](/concepts/governance-action-process) or a [Governance Action Type](/concepts/governance-action-type).  There is also a differentiation between a Governance Action Type that is used to initiate a standalone Engine Action and a specialized Governance Action Type called a [Governance Action Process Step](/concepts/governance-action-process-step) that describes a single step in a Governance Action Process.
-
-??? functional "New framework services"
-    The framework services provide common services to the [Open Metadata Access Services (OMASs)](/services/omas).  The [Governance Action Framework Service](/services/gaf-metadata-management) includes a new ser of services called the `Open Governance Service` that provides services to define governance actions such as [governance action processes](/concepts/governance-action-process) and [governance action types](/concepts/governance-action-type), and the initiation of [engine actions](/concepts/engine-action) either directly or via a governance action process or governance action type.
+??? functional "Improved framework services"
+    The framework services provide common services to the [Open Metadata Access Services (OMASs)](/services/omas).  The [Governance Action Framework Service](/services/gaf-metadata-management) includes a new set of services called the `Open Governance Service` that provides services to define governance actions such as [governance action processes](/concepts/governance-action-process) and [governance action types](/concepts/governance-action-type), and the initiation of [engine actions](/concepts/engine-action) either directly or via a governance action process or governance action type.
 
     All OMASs now have clients for the Connected Asset Service, Open Metadata Store, Open Governance Service and the Open Integration Service.
 
@@ -98,20 +101,20 @@ Release 5.0 is a major functional release focused on usability, both from the po
 
     The survey action services run in the [Engine Host](/concepts/engine-host).   There is a new Open Metadata Engine Service (OMES) to support survey action services. It is called the [Survey Action OMES](/services/omes/survey-action/overview).
 
-??? deprecation "Open Discovery Framework (ODF) is now deprecated"
-    The function of the Survey Action Framework (SAF) is based on the [Open Discovery Framework (ODF)](/frameworks/odf/overview), which has now been deprecated.  The reason for this is two-fold.  Firstly the use of the term "discovery" in the framework's name is unfortunate since it is not the only mechanism that Egeria has for discovering metadata.  This makes the descriptions about metadata discovery confusing.  Secondly, the Open Discovery Framework has some usability issues relating to the discovery of schemas that have now been fixed in the Survey Action Framework.  The Open Discovery Framework will remain in the codebase for at least 6 months to allow time for the existing open discovery services to move to the Survey Action Framework. It is recommended that all new implementations use the Survey Action Framework.
+    ??? deprecation "Open Discovery Framework (ODF) is now deprecated"
+        The function of the Survey Action Framework (SAF) is based on the [Open Discovery Framework (ODF)](/frameworks/odf/overview), which has now been deprecated.  The reason for this is two-fold.  Firstly the use of the term "discovery" in the framework's name is unfortunate since it is not the only mechanism that Egeria has for discovering metadata.  This makes the descriptions about metadata discovery confusing.  Secondly, the Open Discovery Framework has some usability issues relating to the discovery of schemas that have now been fixed in the Survey Action Framework.  The Open Discovery Framework will remain in the codebase for at least 6 months to allow time for the existing open discovery services to move to the Survey Action Framework. It is recommended that all new implementations use the Survey Action Framework.
+
+??? functional "New Apache Atlas Survey Action Service"
+    There is a new [survey action service](/concepts/survey-action-service) that provides a report on the content of an Apache Atlas server.  It is called the [Apache Atlas Survey Service](/connectors/apache-atlas/apache-atlas-survey-action-service).  This survey action services complements the [Apache Atlas Integration Connector](/connectors/apache-atlas/apache-atlas-catalog-integration-connector) that exchanges metadata between the open metadata ecosystem and an Apache Atlas server.
 
 ??? functional "Extended support for file system monitoring"
     The context for all the [Open Metadata Integration Services (OMIS)](/services/omis) has been updated to support a file system listener.  This means that [integration connectors](/concepts/integraiton-connector) can easily monitor changing files and directories.  This can be useful for situations where new information is being exchanged with open metadata using files such as CSV files and spreadsheets.
 
-??? functional "New View Service: Collection Manager OMVS"
-    [Collection Manager OMVS](/services/omvs/collection-manager/overview) supports the organizing and browsing of metadata in collections.  Collections can themselves be organized hierarchically.  An example of its use is in managing the collections of assets that make up digital products.
+??? functional "New View Service: Automated Curation OMVS"
+    [Automated Curation OMVS](/services/omvs/automated-curation/overview) is a new view service in design that supports UIs that enable the user to set up integration connectors in an integration daemon, run engine actions and governance action processes.
 
 ??? functional "Improved anchor support"
     Anchor classifications now include the type name of the anchor entity.  This allows the Anchor classification to be used to search for string values in any element that is anchored to a particular type of element.
-
-??? functional "New Apache Atlas Connector"
-    There is a new [open discovery service](/concepts/open-discovery-service) that provides a report on the content of an Apache Atlas server.  It is called the [Apache Atlas Open Discovery Service](/connectors/discovery/apache-atlas-discovery-service).
 
 ??? functional "Consolidation of UI Backend Services"
     Today there are two approaches to providing the backend services for a UI:
@@ -173,8 +176,8 @@ Release 5.0 is a major functional release focused on usability, both from the po
 ??? functional "Integration Connector Providers can now list catalog target types"
     The developer of an [integration connector](/concepts/integration-connector) can provide information about the third party technology it exchanges metadata with through [catalog target types](/concepts/catalog-target).
 
-??? functional "Governance Service Providers can now list action target types"
-    The developer of a [governance service](/concepts/governance-service) can provide information about the third party technology it exchanges metadata with through [action target types](/concepts/action-target).
+??? functional "Governance Service Providers can now export their specification"
+    The developer of a [governance service](/concepts/governance-service) can provide information about the request types, request parameters and [action target types](/concepts/action-target) it consumes and produces making it easier for consumers creating [governance engine definitions](/concepts/governance-engine-definition), [governance action types](/concepts/governance-action-type) and [governance action processes](/concepts/governance-action-process) to incorporate the governance service into their work.
 
 ??? functional "Extension to the OpenConnectorArchive"
     The `OpenMetadataArchive.omarchive` (was `OpenMetadataArchive.json`) now contains reference data for many [file types](/concepts/file-type) and [deployed implementation types](/concepts/deployed-implementation-type).  The deployed implementation types include details of Egeria's runtimes and services and how they link together.  The deployed implementation types are also linked to details of the connectors that work with the associated technology.  This is to assist someone setting up new automated curation and governance activities in the open metadata ecosystem.
@@ -187,5 +190,12 @@ Release 5.0 is a major functional release focused on usability, both from the po
 
 ??? info "Management of open metadata type definitions"
     As the Egeria code base evolved, sets of definitions for the unique identifiers and type names of the open metadata types appeared in multiple modules.  There was a set in the open metadata archive helper, the generic handlers, multiple OMASs and the Governance Action Framework.  This was in addition to the original definitions in the open metadata type archive itself.  In release 5.0, these copies of the open metadata type identifiers have been consolidated into one set found in the Governance Action Framework.  There is still work to change the type definitions in the open metadata type archive to use the definitions from the GAF.  This change removes the inconsistencies and gaps in the definitions.  It also makes it easier to discover where a particular open metadata type is used.
+
+??? danger "Removal of the Anonymous Repository Services"
+    The anonymous versions to the OMRS Metadata Collection REST APIs have been removed from Egeria's runtimes since they do not include caller information, and therefore provide opportunities for a denial of service attack.  These services were deprecated in version 2 of Egeria.
+
+      * getMetadataCollectionId
+      * getEntity
+      * getRelationship
 
 --8<-- "snippets/abbr.md"
