--- a/site/docs/release-notes/5-1.md
+++ b/site/docs/release-notes/5-1.md
@@ -1,21 +1,21 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.1 (Expected April 2024)
+## Release 5.1 (Expected June 2024)
 
 _**These are DRAFT release notes.  The notes will be updated until & when 5.1 is released**_
 
-??? functional "New View Service: Automated Curation OMVS"
-    [Automated Curation OMVS](/services/omvs/automated-curation/overview) is a new view service in design that supports UIs that enable the user to set up integration connectors in an integration daemon, run engine actions and governance action processes.
-    
 ??? functional "New View Service: Notification Manager OMVS"
     [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [Context Events](/concepts/context-event).
 
 ??? functional "New Engine Service: Event Action OMES"
     [Event Action OMES](/services/omes/event-action/overview) supports the running of [event-action-services](/concepts/event-action-service).
 
+??? functional "New View Service: Collection Manager OMVS"
+    [Collection Manager OMVS](/services/omvs/collection-manager/overview) supports the organizing and browsing of metadata in collections.  Collections can themselves be organized hierarchically.  An example of its use is in managing the collections of assets that make up digital products.
 
- 
+
+
 
 
 
