Remove dojos, add informal blogs
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -134,7 +134,7 @@ Release 5.0 is a major functional release focused on usability, both from the po
         [Asset Catalog OMVS](/services/omvs/asset-catalog/overview) is a new view service that supports the `/assets` and `/lineage` services from Egeria UI Application.  There are two versions of each call, one of which is deprecated.  The deprecated version exactly matches the API supported by the Egeria UI application, however, it does not manage exceptions in the way expected by an Egeria API.  It will remain in place until the existing UI components are updated to support Egeria's standard exception handling.
 
     ??? functional "Updates to Glossary Browser OMVS"
-        Glossary Browser OMVS has been extended to support the `/glossary` services from the Egeria UI application.  They are deprecated because they do not support the standard exception handling, but are in place to support existing UI components.  Once the UI components have been updated to support the main API then these new services will be removed.
+        [Glossary Browser OMVS](/services/omvs/glossary-browser/overview) has been extended to support the `/glossary` services from the Egeria UI application.  They are deprecated because they do not support the standard exception handling, but are in place to support existing UI components.  Once the UI components have been updated to support the main API then these new services will be removed.
 
     ??? danger "Changes to view service REST API URLs"
         The following Open Metadata View Services (OMVSs) (and all future OMVSs) support the new URL pattern of `{{baseURL}}/servers/{{server}}/api/open-metadata/{{serviceURLRoot}}/...`
