--- a/site/docs/release-notes/5-1.md
+++ b/site/docs/release-notes/5-1.md
@@ -8,8 +8,8 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.1 is
 ??? functional "New View Service: Notification Manager OMVS"
     [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [Context Events](/concepts/context-event).
 
-??? functional "New Engine Service: Event Action OMES"
-    [Event Action OMES](/services/omes/event-action/overview) supports the running of [event-action-services](/concepts/event-action-service).
+??? functional "New Engine Service: Context Event OMES"
+    [Context Event OMES](/services/omes/context-event/overview) supports the running of [Context Event Services](/concepts/context-event-service).
 
 ??? functional "New View Service: Collection Manager OMVS"
     [Collection Manager OMVS](/services/omvs/collection-manager/overview) supports the organizing and browsing of metadata in collections.  Collections can themselves be organized hierarchically.  An example of its use is in managing the collections of assets that make up digital products.
