Add new properties to engine actions
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -20,8 +20,9 @@ Release 5.0 is a major functional release focused on usability, both from the po
     * A new classification called [*RootCollection*](/types/0/0021-Collections) can be added to a collection entity to indicate that it is the root of collection hierarchy.
     * The [*Collection*](/types/0/0021-Collections) entity has a new attribute called *collectionType* that can be used to identify the concept that the collection represents.
     * A new supertype called [*Action*](/types/1/0137-Actions) has been added to the [*ToDo*](/types/1/0137-Actions) and [*EngineAction*](/types/4/0463-Engine-Actions).
-    * The [*Actions*](/types/1/0137-Actions) relationship now links an [*Action*](/types/1/0137-Actions) to a [*Referenceable*](/types/0/0010-Base-Model).
-    * The [*ToDo*](/types/1/0137-Actions) entity has a new property called *lastReviewTime*.
+    * The [*ActionSponsor*](/types/1/0137-Actions) relationship now links an [*Action*](/types/1/0137-Actions) to a [*Referenceable*](/types/0/0010-Base-Model).
+    * The [*ToDo*](/types/1/0137-Actions) entity has a new attribute called *lastReviewTime*.
+    * The [*EngineAction*](/types/4/0463-Engine-Actions) entity has new attributes called *requesterUserId* and *requestedStartDate*.
     * A new classification called [*PersonalProject*](/types/1/0130-Projects) can be added to a project entity to indicate that it is an informal project that have been created by an individual to help them organize their work.
     * A new classification called [*StudyProject*](/types/1/0130-Projects) can be added to a project entity to indicate that it is a focused analysis of a topic, person, object or situation.
     * A new classification called [*DataScope*](/types/2/0210-Data-Stores) can be added to a referenceable entity (typically a DataStore or DataSet) to define the scope of the associated data resource in space and time.
@@ -175,6 +176,9 @@ Release 5.0 is a major functional release focused on usability, both from the po
 
 ??? functional "Integration Connector Providers can now list catalog target types"
     The developer of an [integration connector](/concepts/integration-connector) can provide information about the third party technology it exchanges metadata with through [catalog target types](/concepts/catalog-target).
+
+??? functional "Overriding configuration properties for each catalog target"
+    An integration connector's behaviour is controlled through a map of configuration properties passed in the *configurationProperties* attribute of the integration connector's connection object.  It is now possible to override the settings of these properties for each catalog target that the integration connector iw processing.  These overriding configuration properties are stored in the [*CatalogTarget*](/types/4/0464-Dynamic-Integration-Groups) relationship's properties.
 
 ??? functional "Governance Service Providers can now export their specification"
     The developer of a [governance service](/concepts/governance-service) can provide information about the request types, request parameters and [action target types](/concepts/action-target) it consumes and produces making it easier for consumers creating [governance engine definitions](/concepts/governance-engine-definition), [governance action types](/concepts/governance-action-type) and [governance action processes](/concepts/governance-action-process) to incorporate the governance service into their work.
